terraform/modules/compute_cluster/security_groups.tf
resource "aws_security_group" "lb_security_group" {
  name        = "lb-sg"
  description = "Controls access to the application Load Balancer"
  vpc_id      = var.aws_vpc.id

  tags = var.default_tags

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs_security_group" {
  name        = "ecs-sg"
  description = "ECS Security Group"
  vpc_id      = var.aws_vpc.id
  tags        = var.default_tags

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow traffic from ALB
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"

    security_groups = [aws_security_group.lb_security_group.id]
  }

  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }
}
